fixed responsiveness issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,6 @@ h3{
 		width: 300px;
 	}
 	.social__section a{
-		padding: 10px 15px ;
+		padding: 20px 15px 0px 15px;
 	}
 }
